--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -9,17 +9,19 @@
     display: flex;
     height: 70px;
     justify-content: space-between;
-    align-items: center;
-
+    align-items: center;   
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
 }
-
+.logo{
+    padding: 15px 30px;
+}
 .list {
     list-style: none;
     display: flex;
+    padding: 15px 30px;
 }
 
 .list li .anchorTag {
