--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -9,14 +9,22 @@
     display: flex;
     height: 70px;
     justify-content: space-between;
-    align-items: center;   
-    position: absolute;
+    align-items: center;
+    background-color: black;       
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
 }
 .logo{
     padding: 15px 30px;
+    
+}
+.logo  h1{
+font-style: italic;
+outline: 5px solid #f73451;
+border-radius: 12px;
+padding: 3px 8px;
 }
 .list {
     list-style: none;
