--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -52,16 +52,19 @@ padding: 3px 8px;
         width: 100%;
         height: 100vh;
         position: absolute;
-        top: 0;
+        top: 0%;
         left: -100%;
         transition: .5s;
         z-index: 1;
+        overflow: hidden;
     }
 
     .list.active {
         left: 0;
     }
-
+.logo{
+    z-index: 2;
+}
     .list li {
         padding: 10px;
         font-size: 20px;
@@ -88,9 +91,8 @@ padding: 3px 8px;
 
 .image-section {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     position: relative;
-
 }
 
 .img {
