--- a/src/Component/ourteam/ourteam.style.css
+++ b/src/Component/ourteam/ourteam.style.css
@@ -1,14 +1,43 @@
-.container-our-team{
+.container-our-team {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-
+    
 }
-.our-team .row-our-team{
+
+.our-team .row-our-team {
     display: flex;
     gap: .5rem;
+  }
+
+.col-our-team {
+    width: 50%;
+    height: 250px;
+    border: 2px solid #fff;
+    overflow: hidden;
+    margin-bottom: 20px;
+    position: relative;
 }
-.col-our-team img:hover{
-cursor: pointer;
+
+.col-our-team img {
+    width: 100%;
+    transform: scale(1);
+    transition: .5s;
 }
+
+.col-our-team img:hover {
+    cursor: pointer;
+    transform: scale(1.5);
+
+}
+/* .col-our-team::after{
+    position: absolute;
+    top: 0%;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 250px;
+    background-color: #ffffff8c;
+       
+} */
